refactor: move auth.go and profile.go
