# docs/swagger.json
@@ -178,6 +178,17 @@
                 "tags": [
                     "profile"
                 ],
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/address.AddressCreateDto"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -190,7 +201,7 @@
         },
         "/v1/profile/addresses/{id}": {
             "get": {
-                "description": "Get `Address` Info By Id",
+                "description": "Get `Address` Info By ID",
                 "produces": [
                     "application/json"
                 ],
@@ -338,6 +349,47 @@
                 }
             }
         },
+        "address.AddressCreateDto": {
+            "type": "object",
+            "properties": {
+                "city": {
+                    "type": "string"
+                },
+                "company": {
+                    "type": "string"
+                },
+                "countryID": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "ext": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "stateID": {
+                    "type": "integer"
+                },
+                "streetAddress1": {
+                    "type": "string"
+                },
+                "streetAddress2": {
+                    "type": "string"
+                },
+                "zip": {
+                    "type": "string"
+                }
+            }
+        },
         "address.AddressUpdateDto": {
             "type": "object",
             "properties": {
@@ -358,9 +410,6 @@
                 },
                 "firstName": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "lastName": {
                     "type": "string"
@@ -462,7 +511,7 @@
                         "$ref": "#/definitions/address.Address"
                     }
                 },
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
                 "email": {
@@ -474,7 +523,7 @@
                 "name": {
                     "type": "string"
                 },
-                "updated_at": {
+                "updatedAt": {
                     "type": "string"
                 }
             }
